fixed homepage image covering header

--- a/src/pages/styles/homepage.css
+++ b/src/pages/styles/homepage.css
@@ -38,7 +38,7 @@
 
 .homepage-image-container {
 	width: 370px;
-	height: 390px;
+	height: 430px;
 }
 
 .homepage-image-wrapper {
